--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    height: 175vh;
 }
 
 .navbar{
@@ -63,28 +63,6 @@ ul li a{
 
 ul li a:hover{
     color: #9f9a97;;
-}
-
-.search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-}
-
-.srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #9f9a97;;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
 }
 
 .content{
@@ -219,23 +197,75 @@ ul li a:hover{
     text-decoration: none;
     color: #9f9a97;;
 }
+/* .mysql{
+    height: 30px;
+    width:30px;;
+} */
+.java{
+    background: #f01515;
+}
 
+.content1{
+    width: 1125px;
+    height: 275px;
+    margin: auto;
+    color: #fff;
+    position: relative;
+}
+
+.content1 span{
+    color: #9f9a97;;
+    font-size: 65px
+}
+
+.content1 h1{
+    font-family: 'Times New Roman';
+    font-size: 50px;
+    /* color: aqua; */
+    padding-left: 725px;
+    margin-top: 11%;
+    letter-spacing: 2px;
+}
+
+.content2{
+    width: 1200px;
+    height: 295px;
+    margin: auto;
+    color: #fff;
+    margin-top: -8px;
+    position: relative;
+}
+
+.content2 span{
+    color: #9f9a97;;
+    font-size: 65px
+}
+
+.content2 h1{
+    font-family: 'Times New Roman';
+    font-size: 50px;
+    /* color: aqua; */
+    padding-left: 20px;
+    margin-top: 9%;
+    letter-spacing: 2px;
+}
 
 .wrapper{
     position: absolute;
-    top: 50%;
+    /* top: 50%; */
     left: 50%;
+    margin-top: 30%;
     transform: translate(-50%, -50%);
     width: 100%;
     max-width: 550px;
-    background: rgba(0,0,0,0.8);
+    background: transparent;
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
   
   .wrapper .title h1{
-    color: #c5ecfd;
+    color: #0f0f0f;
     text-align: center;
     margin-bottom: 25px;
   }
@@ -260,9 +290,9 @@ ul li a:hover{
     margin: 10px 0;
     background: transparent;
     border: 0px;
-    border-bottom: 2px solid #c5ecfd;
+    border-bottom: 2px solid #0f0f0f;
     padding: 10px;
-    color: #c5ecfd;
+    color: #0f0f0f;
     width: 100%;
   }
   
@@ -272,41 +302,33 @@ ul li a:hover{
   
   ::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color: #c5ecfd;
+    color: #0f0f0f;
   }
   ::-moz-placeholder {
     /* Firefox 19+ */
-    color: #c5ecfd;
+    color: #0f0f0f;
   }
   :-ms-input-placeholder {
     /* IE 10+ */
-    color: #c5ecfd;
+    color: #0f0f0f;
   }
   
   .btn {
-      background: #39b7dd;
+      background: #9f9a97;
       text-align: center;
       padding: 15px;
       border-radius: 5px;
-      color: #fff;
+      color: #0f0f0f;
       cursor: pointer;
       text-transform: uppercase;
   }
-  
-  @media screen and (max-width: 600px){
-    .contact-form{
-      flex-direction: column;
-    }
-    .msg textarea{
-      height: 80px;
-    }
-    .input-fields,
-    .msg{
-      width: 100%;
-    }
-  }
-  /* body{
-  background: url('https://i.imgur.com/kk76J5I.jpg') no-repeat top center;
-  background-size: cover;
-  height: 100vh;
+
+.footer-area {
+    margin-top: 50%;
+    background:#343434;
+    padding: 100px 0px 25px;
+}
+/* @media only screen and (min-width: 1200px) and (max-width: 3640px)
+.container {
+    max-width: 1170px;
 } */
