--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@
     background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
     background-position: center;
     background-size: cover;
-    height: 175vh;
+    height: 100vh;
+}
+
+.main1{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 10vh;
 }
 
 .navbar{
@@ -34,8 +42,8 @@
 }
 
 .menu{
-    width: 800px;
-    float: right;
+    width: 400px;
+    float: left;
     height: 70px;
 }
 
@@ -64,6 +72,53 @@ ul li a{
 ul li a:hover{
     color: #9f9a97;;
 }
+.search{
+    width: 330px;
+    float: left;
+    margin-left: 270px;
+}
+
+.srch{
+    font-family: 'Times New Roman';
+    width: 200px;
+    height: 40px;
+    background: transparent;
+    border: 1px solid #9f9a97;
+    margin-top: 13px;
+    color: #fff;
+    border-right: none;
+    font-size: 16px;
+    float: left;
+    padding: 10px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.btn{
+    width: 100px;
+    height: 40px;
+    background: #9f9a97;
+    border: 2px solid #9f9a97;
+    margin-top: 13px;
+    color: #fff;
+    font-size: 15px;
+    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+.btn:hover{
+    color: #000;
+}
+
+.btn:focus{
+    outline: none;
+}
+
+.srch:focus{
+    outline: none;
+}
+
 
 .content{
     width: 1200px;
@@ -197,12 +252,25 @@ ul li a:hover{
     text-decoration: none;
     color: #9f9a97;;
 }
-/* .mysql{
-    height: 30px;
-    width:30px;;
-} */
-.java{
-    background: #f01515;
+
+.liw{
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.icons a{
+    text-decoration: none;
+    color: #fff;
+}
+.icons ion-icon{
+    color: #fff;
+    font-size: 30px;
+    padding-left: 14px;
+    padding-top: 5px;
+    transition: 0.3s ease;
+}
+.icons ion-icon:hover{
+    color: #9f9a97;
 }
 
 .content1{
@@ -215,15 +283,15 @@ ul li a:hover{
 
 .content1 span{
     color: #9f9a97;;
-    font-size: 65px
+    font-size: 55px
 }
 
 .content1 h1{
     font-family: 'Times New Roman';
     font-size: 50px;
     /* color: aqua; */
-    padding-left: 725px;
-    margin-top: 11%;
+    padding-left: 361px;
+    margin-top: 20%;
     letter-spacing: 2px;
 }
 
@@ -252,9 +320,8 @@ ul li a:hover{
 
 .wrapper{
     position: absolute;
-    /* top: 50%; */
     left: 50%;
-    margin-top: 30%;
+    margin-top: 27%;
     transform: translate(-50%, -50%);
     width: 100%;
     max-width: 550px;
@@ -316,18 +383,13 @@ ul li a:hover{
   .btn {
       background: #9f9a97;
       text-align: center;
-      padding: 15px;
+      padding: 2px;
       border-radius: 5px;
       color: #0f0f0f;
       cursor: pointer;
       text-transform: uppercase;
   }
 
-.footer-area {
-    margin-top: 50%;
-    background:#343434;
-    padding: 100px 0px 25px;
-}
 /* @media only screen and (min-width: 1200px) and (max-width: 3640px)
 .container {
     max-width: 1170px;
