--- a/style1.css
+++ b/style1.css
@@ -21,54 +21,57 @@
     height: 100vh;
 }
 
-.container .heading{
+.container .heading {
     text-align: center;
-    padding-bottom: 15px;
-    color:#fff;
+    padding-bottom: 30px;
+    margin-top: 88px;
+    color: #fff;
     text-shadow: 0 5px 10px rgba(0,0,0,.2);
-    font-size: 50px;
+    font-size: 40px;
 }
 
-.container .box-container{
+.container .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-    gap:15px;
+    gap: 15px;
     margin-top: -10px;
 }
 
-.container .box-container .box{
+.container .box-container .box {
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     border-radius: 5px;
     background: #fff;
     text-align: center;
-    padding:15px 20px;
+    height: 186px;
+    width: 257px;
+    padding: -1px 20px;
 }
 
-.container .box-container .box img{
-    height: 80px;
-    margin-top: 18px;
+.container .box-container .box img {
+    height: 55px;
+    margin-top: 6px;
 }
 
-.container .box-container .box h3{
-    color:#444;
-    font-size: 22px;
-    padding:10px 0;
+.container .box-container .box h3 {
+    color: #444;
+    font-size: 19px;
+    padding: 7px 0;
 }
 
-.container .box-container .box p{
-    color:#777;
-    font-size: 15px;
-    line-height: 1.8;
+.container .box-container .box p {
+    color: #777;
+    font-size: 13px;
+    line-height: 1.3;
 }
 
-.container .box-container .box .btn{
-    margin-top: 10px;
+.container .box-container .box .btn {
+    margin-top: 5px;
     display: inline-block;
-    background:#333;
-    color:#fff;
+    background: #333;
+    color: #fff;
     font-size: 17px;
     border-radius: 5px;
-    padding: 8px 25px;
+    padding: 5px 25px;
 }
 
 .container .box-container .box .btn:hover{
