--- a/style1.css
+++ b/style1.css
@@ -95,7 +95,7 @@ ul li a:hover{
 
 .btn{
     width: 100px;
-    height: 40px;
+    height: 33px;
     background: #9f9a97;
     border: 2px solid #9f9a97;
     margin-top: 13px;
@@ -150,9 +150,9 @@ ul li a:hover{
     border-radius: 5px;
     background: #fff;
     text-align: center;
-    height: 186px;
+    height: fit-content;
     width: 257px;
-    padding: -1px 20px;
+    padding: 15px;
 }
 
 .container .box-container .box img {
@@ -177,9 +177,9 @@ ul li a:hover{
     display: inline-block;
     background: #333;
     color: #fff;
-    font-size: 17px;
+    font-size: 12px;
     border-radius: 5px;
-    padding: 5px 25px;
+    padding: 4px;
 }
 
 .container .box-container .box .btn:hover{
