--- a/style2.css
+++ b/style2.css
@@ -118,81 +118,79 @@ ul li a:hover{
     outline: none;
 }
 
-.container{
-    /* background:linear-gradient(45deg, rgb(24, 24, 24), rgb(169, 171, 169)); */
-    padding:15px 9%;
-    padding-bottom: 100px;
-    width: 100%;
-    /*background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);*/
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
+.right-frame{
+    margin-left: 30px;
 }
 
-.container .heading {
-    text-align: center;
-    padding-bottom: 30px;
-    margin-top: 88px;
-    /* color: #fff; */
-    text-shadow: 0 5px 10px rgba(0,0,0,.2);
-    font-size: 40px;
+/* body
+{
+	font-family: "Lato", sans-serif;
+} */
+.sidenav
+{
+	/* background: #002240; */
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(5.jpg);
+	position: absolute;
+	height: 100%;
+	width: 20%;
+	top: 61px;
+	left: 0;
+	z-index: 1;
+	overflow-x: hidden;
+	padding-top: 20px;
+}
+.sidenav a
+{
+	color: #fff;
+	padding: 10px 15px 10px 16px;
+	text-decoration: none;
+	font-size: 21px;
+	display: block;
+}
+.sidenav a:hover
+{
+	background: rgb(166, 166, 168);
+}
+h2
+{
+	padding: 10px 15px 10px 16px;
+	color: #fff;
+	border-bottom-style: solid;
 }
 
-.container .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-    gap: 15px;
-    margin-top: -10px;
-}
-
-.container .box-container .box {
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
-    border-radius: 5px;
-    /* background:#070707; */
-    text-align: center;
-    height: fit-content;
-    width: 257px;
-    padding: 15px;
-}
-
-.container .box-container .box img {
-    height: 55px;
-    margin-top: 6px;
-}
-
-.container .box-container .box h3 {
-    color: #444;
-    font-size: 19px;
-    padding: 7px 0;
-}
-
-.container .box-container .box p {
-    color: #777;
-    font-size: 13px;
-    line-height: 1.3;
-}
-
-.container .box-container .box .btn {
-    margin-top: 5px;
-    display: inline-block;
-    background: #333;
-    color: #fff;
-    font-size: 12px;
-    border-radius: 5px;
-    padding: 4px;
-}
-
-.container .box-container .box .btn:hover{
-    letter-spacing: 1px;
-}
-
-.container .box-container .box:hover{
-    box-shadow: 0 10px 15px rgba(0,0,0,.3);
-    transform: scale(1.03);
-}
-
-@media (max-width:768px){
-    .container{
-        padding:20px;
+.main {
+        background: #b39440;
+        position: absolute;
+        height: 100%;
+        width: fit-content;
+        top: 61px;
+        left: 270px;
+        padding: 15px;
+        overflow-x: hidden;
     }
+
+
+/*Making responsive*/
+@media screen and (max-width: 600px)
+{
+	.sidenav
+	{
+		padding-top: 15px;
+		width: 155px;
+
+	}
+	.sidenav a
+	{
+		padding-left: 20px;
+		font-size: 18px;
+	}
+	.main
+	{
+		margin-left: 32%;
+		font-size: 15px;
+	}
+	p
+	{
+		display: inline-block;
+	}
 }
