--- a/style2.css
+++ b/style2.css
@@ -9,6 +9,13 @@
     text-transform: capitalize;
     transition: .2s linear;
 }
+pre {
+    display: block;
+    font-family: monospace;
+    white-space-collapse: preserve;
+    text-wrap: nowrap;
+    margin: 1em 0px;
+}
 
 .main1{
     width: 100%;
