--- a/style2.css
+++ b/style2.css
@@ -183,7 +183,7 @@ h2
 	.sidenav
 	{
 		padding-top: 15px;
-		width: 155px;
+		width: 145px;
 
 	}
 	.sidenav a
@@ -201,3 +201,31 @@ h2
 		display: inline-block;
 	}
 }
+
+.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    display: block;
+    text-decoration: none;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .show {
+    display: block;
+  }
+  
