--- a/style3.css
+++ b/style3.css
@@ -190,3 +190,31 @@ ul li a:hover{
                 margin-right: 10px;
                 color: #9f9a97;
             }
+
+            .dropdown {
+                display: inline-block;
+              }
+              
+              .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #f9f9f9;
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+                z-index: 1;
+              }
+              
+              .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                display: block;
+                text-decoration: none;
+              }
+              
+              .dropdown-content a:hover {
+                background-color: #ddd;
+              }
+              
+              .show {
+                display: block;
+              }
+              
